<?xml version="1.0" encoding="utf-8" ?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:background="@color/red_200"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:background="@drawable/round_style"
        android:layout_margin="50dp"
        android:paddingBottom="20dp"
        android:paddingTop="10dp">

        <ImageView
            android:id="@+id/lpg_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rotation="45"
            android:src="@drawable/logo"
            android:contentDescription="@string/logo_des"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"/>

        <TextView
            android:id="@+id/Consumer_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/page_title"
            android:textSize="30sp"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:layout_margin="20dp"/>


        <EditText
            android:id="@+id/consumer_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/consumer_input"
            android:inputType="number"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:autofillHints="0"/>

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:autofillHints="" />


        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:text="@string/login_btn"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:id="@+id/forget_password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/forget_label"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:id="@+id/Distributor_label"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/distributor_label"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

    </LinearLayout>






</ScrollView>