<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DistributorLogin"
    android:layout_gravity="center"
    android:background="@color/red_200">
    <LinearLayout
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:background="@drawable/round_style"
        android:layout_margin="50dp"
        android:paddingBottom="20dp"
        android:paddingTop="10dp">


        <ImageView
            android:id="@+id/lpg_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rotation="45"
            android:src="@drawable/logo"
            android:contentDescription="@string/logo_des"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"/>



        <TextView
            android:id="@+id/Distributor_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/distributor_page_title"
            android:textSize="30sp"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textStyle="bold"/>

        <Spinner
            android:id="@+id/disSpinner"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:autofillHints="Select Distributor"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <EditText
            android:id="@+id/distributor_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/distributorId"
            android:inputType="number"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
             />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            />
        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_500"
            android:text="@string/login_btn"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

    </LinearLayout>


</ScrollView>
