<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DistributorPage">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#3F51B5"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:title="Welcome, "
                app:titleTextColor="#ffff" />

            <ImageButton
                android:id="@+id/refresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/toolbar2"
                app:srcCompat="@drawable/ic_baseline_refresh_24"
                android:backgroundTint="#3F51B5"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/distInfo"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:layout_below="@+id/appBarLayout"
        android:layout_marginTop="0dp"
        android:background="@color/grey"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/distributorName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/distributorName"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"

            />

        <TextView
            android:id="@+id/distributorId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/distributorNo"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/distributorLoc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/DistributorLoc"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />


    </LinearLayout>
    <TextView
        android:id="@+id/orderHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Current Order List"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/purple_500"
        android:textAlignment="center"
        android:layout_below="@+id/distInfo"
        android:layout_margin="10dp"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/idRVOrder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/orderHeader"/>


</RelativeLayout>